/**
 * Copyright 2018-2021 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;


// Status condition specification
message StatusCond {
    // Kind of condition, should be equal to "status"
    string kind = 1;

    // Operation to set the condition on
    string operation = 2;

    // Trigger to check, must a valid status or union of statuses, e.g. succeeded  or succeeded | failed
    string trigger = 3;
}


// Input condition specification
message IoCond {
    // Kind of condition, should be equal to "io"
    string kind = 1;

    // Param to condition on: e.g. builds.outputs.param1
    string param = 2;

    // Trigger to check, trigger condition must conform to the iotype, e.g. value condition: v1|v2|V3
    string trigger = 3;
}


message OperationCond {
    oneof operation_condition {
        IoCond io_conidtion = 1;
        StatusCond status_condition = 2;
    }
}
