/**
 * Copyright 2018-2021 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;

import "v1/polyflow/status.proto";
import "v1/polyflow/auxiliary_containers.proto";

option go_package = "v1/polyflow";

// Notification message
message Notification {
  // Connections to use for notification
  repeated string connections = 1;

  // Optional trigger policy, default done
  Statuses trigger = 2;
}

// Plugins specification
message Plugins {
    // Optional flag to tell Polyaxon if it should set an auth context for the run, default true
    bool auth = 1;

    // Optional flag to tell Polyaxon if it should set a docker socket context for the run, default false
    bool docker = 2;

    // Optional flag to tell Polyaxon if it should set a shm context for the run, default false
    bool shm = 3;

    // Optional flag to mount the artifacts store to the main container
    bool mountArtifactsStore = 4;

    // Optional flag to tell Polyaxon to collect articats and outputs
    bool collectArtifacts = 5;

    // Optional flag to tell Polyaxon to collect logs
    bool collectLogs = 6;

    // Optional flag to tell Polyaxon to collect container resouces (cpu/memory/gpu)
    string collectResources = 7;

    // Optional flag to tell Polyaxon to sync statuses
    bool syncStatuses = 8;

    // Auto resume a run's artifacts (applies to resume and retries), works if collects_artifacts is enabled
    bool autoResume = 9;

    // Optional log level
    string logLevel = 10;

    // Optional flag to tell Polyaxon to connect to the control plan via the external host
    bool externalHost = 11;

    // Optional to override the sidecar's default config
    PolyaxonSidecarContainer sidecar = 12;

    // Option Notifications: Deprecated
    repeated Notification notifications = 13;
}
